Changelog
=========

1.1 (unreleased)
----------------

- Nothing changed yet

1.0 (2012-01-13)
----------------

- Fix regex for 5min endpoint.
- Handle more error: HTTPError, OEmbedError
- Add url2embed support
- Add oembed support for instagr.am, Vhx.tv, Official.FM, Nfb.ca
  [raphigaziano]
- Add url2embed support for picasaweb
  [raphigaziano]

1.0a (2012-01-02)
-----------------

- Initial release